
2008-08-08

   * Migrated to TagxON-Notation: 
     code ::= key | key : value | key : { (code (, code)*) }
     
     In other words: Codes can now have many values and not just one.
     
     Example code: 
     
     argumentation.humor : { 
       quote: "that's what you think",
       desc: "A good example of humor"
     }
     
   * Format (F4) implemented for new Notation.
   * Added Insert Sub Code Template Action (Shift-F6) for 
     helping with creating sub codes. 
   * Added Insert Session Template Action (Ctrl-F6) for with 
     keeping a coding diary
   * Prominently display definition of in CodeAsTextView.

2008-08-07

   * Started migration to syntax similar to YAML.
   * Coloring of quote property in TextView 

2008-08-04

   * Added action for starting a new trail
   * Fixed NPE in LuceneFacade

2008-07-31

   * Improved performance of Content assist for CodeBox.
   * Create new trail on saving file.
   * Do not create empty trails.

2008-07-30

   * Close Buttons for all Tabs
   * Switched to DockingFrames 1.0.6 preview 3
   * Added Shortcut (F5) to insert current ISO-date.

2008-06-23

   * Better parsing of value strings.

2008-06-10

   * Improved perspective management
   * Added possibility to directly choose the Code for which details should be shown 

2008-06-03

   * F4 as short cut for formatting codes
   * Code Detail View for looking at the description of codes
   * ProgressBar on Saving

2008-06-02

   * Trails can now be executed on the current project to restore lost work.

2008-05-24

   * Improved refetching operations
   * Statistical information export 

2008-05-20

   * Fixed issue regarding empty codes still showing up in filter results for '*'
   * The - operator now filters only primary documents in which the code is 
     contained in all segments of a code

2008-05-19

   * Added logging of editing activities (called trail logging)
   * Fixed bug related to storing of Visualization Presets